# UpMathLLM

./: .gitignore  README.md  pyproject.toml
src/upmathllm/: (Testing) Thai-HomeworkGen-v4.ipynb  (Testing)_Qwen3-4B-Thinking-2507.ipynb  (Testing)_Qwen3-4B-Thinking-2507_2.ipynb  (Testing)_Qwen3-4B-Thinking-2507_3.ipynb  evaluate.ipynb  fine_tune.ipynb  generate_tk.ipynb  testing.ipynb
