[project]
name = "upmathllm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "TK17250", email = "TXK285@gmail.com" }
]
dependencies = [
    "joblib>=1.5.1",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "ipykernel>=6.30.1",
    "datasets>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/upmathllm"]
